--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,3 +7,20 @@
 
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
+
+<table>
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @products.each do |product| %>
+      <tr>
+        <td><%= link_to product.name, product %></td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
