--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,10 +1,11 @@
 <p id="notice"><%= notice %></p>
 <%	if logged_id? %>
-    <%=	 link_to 'Log Out', login_path, method: :delete%>
+    <%=	 link_to 'Log Out', login_path, method: :delete %>
+    <%=  link_to 'Me Markit', seller_path(session[:seller_id]) %>
     <%	 else %>
     <%=	 link_to 'Log In', login_path %>
-    <%	 end %>
-<%=	 link_to 'Seller sign up', signup_path %>
+    <%=	 link_to 'Seller sign up', signup_path %>
+<%	 end %>
 
 <h1>Categories</h1>
 
