--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,2 +1,27 @@
 <h1>Product#new</h1>
-<p>Find me in app/views/product/new.html.erb</p>
+<%= form_for(@product) do |f| %>
+    <% if @product.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@product.errors.count, "error") %> prohibited this category from being saved:</h2>
+
+          <ul>
+            <% @product.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <%=	 f.label :name %>
+    <%=	 f.text_field :name %>
+
+    <%=	 f.label :description %>
+    <%=	 f.text_area :description %>
+
+    <%=	 f.label :category_id %>
+    <%= f.collection_select(:category_id, Category.all, :id, :name) %>
+
+    <%=	 f.hidden_field :seller_id, value: session[:seller_id] %>
+
+    <%= f.submit %>
+<% end %>
