--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -20,6 +20,8 @@
   <% @products.each do |product| %>
       <tr>
         <td><%= link_to product.name, product %></td>
+        <td><%= link_to "Edit", edit_product_path(product) %></td>
+        <td><%= link_to "Delete", product, method: :delete %></td>
       </tr>
   <% end %>
   </tbody>
