--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
-<%	if logged_id? %>
-    <%=	 link_to 'Log Out', login_path, method: :delete %>
+<%	if logged_in? %>
+    <%=	 link_to 'Log Out', logout_path, method: :delete %>
     <%=  link_to 'Me Markit', seller_path(session[:seller_id]) %>
     <%	 else %>
     <%=	 link_to 'Log In', login_path %>
