--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Product#edit</h1>
-<%= form_for(@product) do |f| %>
+<%= form_for @product, url: product_path(@product, admin: @admin) do |f| %>
     <% if @product.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@product.errors.count, "error") %> prohibited this category from being saved:</h2>
