--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,30 +1,25 @@
 <p id="notice"><%= notice %></p>
-<%	if logged_in? %>
-    <%=	 link_to 'Log Out', logout_path, method: :delete %>
-    <%=  link_to 'Me Markit', seller_path(session[:seller_id]) %>
-    <%	 else %>
-    <%=	 link_to 'Log In', login_path %>
-    <%=	 link_to 'Seller sign up', signup_path %>
-<%	 end %>
 
-<h1>Categories</h1>
+<section class="jumbotron text-center">
+  <div class="container">
+    <h1 class="jumbotron-heading">Beljom</h1>
+    <p class="lead text-muted">Mission Statement.</p>
+    <p>
+      <a href="#" class="btn btn-primary">Sign Up as a Seller</a>
+  </div>
+</section>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row">
+  <% @categories.each do |category| %>
+  <div class="col-sm-4">
+    <div class="card text-center">
+      <%= image_tag category.name.downcase, class: 'card-img-top' %>
+      <div class="card-block">
+        <h3 class="card-title"><%= category.name %></h3>
+        <%= link_to 'View', category %>
+      </div>
 
-  <tbody>
-    <% @categories.each do |category| %>
-      <tr>
-        <td><%= image_tag category.name.downcase %></td>
-        <td><%= link_to category.name, category %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+    </div>
+  </div>
+  <% end %>
+</div>
