--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,25 +1,19 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @category.name %>
-</p>
+<h1><%= @category.name %><small> small text</small></h1>
 
 <%= link_to 'Back', categories_path %>
 
-<table>
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
+<div class="row">
   <% @products.each do |product| %>
-      <tr>
-        <td><%= link_to product.name, product %></td>
-      </tr>
+      <div class="col-sm-3">
+        <div class="card text-center">
+          <div class="card-block">
+            <h3 class="card-title"><%= link_to product.name, product %></td></h3>
+            <p class="card-text"><%= product.description %></p>
+          </div>
+
+        </div>
+      </div>
   <% end %>
-  </tbody>
-</table>
+</div>
