--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,36 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Beljom</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <%	if logged_in? %>
+                <li><%=	 link_to 'Log Out', logout_path, method: :delete %></li>
+                <li><%=  link_to 'Me Markit', seller_path(session[:seller_id]) %></li>
+            <%	 else %>
+                <li><%=	 link_to 'Log In', login_path %></li>
+                <li><%=	 link_to 'Seller sign up', signup_path %></li>
+            <%	 end %>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+   Fixed navbar
+    <div class="container">
+      <%= yield %>
+    </div>
+
   </body>
 </html>
