--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,27 +1,44 @@
-<h1>Product#edit</h1>
-<%= form_for @product, url: product_path(@product, admin: @admin) do |f| %>
-    <% if @product.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@product.errors.count, "error") %> prohibited this category from being saved:</h2>
+<div class="container col-md-6">
+  <p id="notice"><%= notice %></p>
+  <%=	 form_for @product, html: {class: 'form-horizontal'} do |f| %>
+      <% if @product.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@product.errors.count, "error") %> prohibited this category from being saved:</h2>
 
-          <ul>
-            <% @product.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
+            <ul>
+              <% @product.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+      <% end %>
+      <div class="form-group">
+        <%=	 f.label :name, class: 'col-sm-2 control-label' %>
+        <div class="col-sm-10">
+          <%=	 f.text_field :name, class: 'form-control', placeholder: 'Name' %>
         </div>
-    <% end %>
+      </div>
 
-    <%=	 f.label :name %>
-    <%=	 f.text_field :name %>
+      <div class="form-group">
+        <%=	 f.label :description, class: 'col-sm-2 control-label' %>
+        <div class="col-sm-10">
+          <%=	 f.text_area :description, class: 'form-control', placeholder: 'Product Description' %>
+        </div>
+      </div>
 
-    <%=	 f.label :description %>
-    <%=	 f.text_area :description %>
+      <div class="form-group">
+        <%=	 f.label :category_id, class: 'col-sm-2 control-label' %>
+        <div class="col-sm-10">
+          <%=	 f.collection_select(:category_id, Category.all, :id, :name, class: 'form-control') %>
+        </div>
+      </div>
 
-    <%=	 f.label :category_id %>
-    <%= f.collection_select(:category_id, Category.all, :id, :name) %>
+      <%=	 f.hidden_field :seller_id, value: session[:seller_id] %>
 
-    <%=	 f.hidden_field :seller_id, value: session[:seller_id] %>
-
-    <%= f.submit %>
-<% end %>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <%=	 f.submit 'Create product', class: 'btn btn-default'%>
+        </div>
+      </div>
+  <% end %>
+</div>
