--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -1,28 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @seller.name %>
-</p>
+<h3>Me Markit</h3>
 
 <%= link_to 'Back', categories_path %>
-<%= link_to 'Add item for sale', new_product_path %>
+<%= link_to 'Add item for sale', new_product_path, class: 'btn btn-primary' %>
 
-<table>
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
+<div class="row">
   <% @products.each do |product| %>
-      <tr>
-        <td><%= link_to product.name, product %></td>
-        <td><%= link_to "Edit", edit_product_path(product) %></td>
-        <td><%= link_to "Delete", product, method: :delete %></td>
-      </tr>
+      <div class="col-sm-3">
+        <div class="card text-center">
+          <div class="card-block">
+            <h3 class="card-title"><%= link_to product.name, product %></td></h3>
+            <%= link_to "Edit", edit_product_path(product), class: 'btn btn-primary' %>
+            <%= link_to "Delete", product, method: :delete, class: 'btn btn-danger' %>
+          </div>
+        </div>
+      </div>
   <% end %>
-  </tbody>
-</table>
+</div>
