user can now add image for a product

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%=  @product.name %></h2>
 <%= link_to 'Back', :back %>
-<p>Image goes here</p>
+<%= image_tag @product.product_image_url.to_s %>
 
 
 <h4>Description: <%=  @product.description %></h4>
