--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,16 +4,4 @@
 
 <%= link_to 'Back', categories_path %>
 
-<div class="row">
-  <% @products.each do |product| %>
-      <div class="col-sm-3">
-        <div class="card text-center">
-          <div class="card-block">
-            <h3 class="card-title"><%= link_to product.name, product %></td></h3>
-            <p class="card-text"><%= product.description %></p>
-          </div>
-
-        </div>
-      </div>
-  <% end %>
-</div>
+<%= render 'shared/prod_display' %>
