--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,44 +1,1 @@
-<div class="container col-md-6">
-  <p id="notice"><%= notice %></p>
-  <%=	 form_for @product, html: {class: 'form-horizontal'} do |f| %>
-      <% if @product.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(@product.errors.count, "error") %> prohibited this category from being saved:</h2>
-
-            <ul>
-              <% @product.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
-              <% end %>
-            </ul>
-          </div>
-      <% end %>
-      <div class="form-group">
-        <%=	 f.label :name, class: 'col-sm-2 control-label' %>
-        <div class="col-sm-10">
-          <%=	 f.text_field :name, class: 'form-control', placeholder: 'Name' %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <%=	 f.label :description, class: 'col-sm-2 control-label' %>
-        <div class="col-sm-10">
-          <%=	 f.text_area :description, class: 'form-control', placeholder: 'Product Description' %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <%=	 f.label :category_id, class: 'col-sm-2 control-label' %>
-        <div class="col-sm-10">
-          <%=	 f.collection_select(:category_id, Category.all, :id, :name, class: 'form-control') %>
-        </div>
-      </div>
-
-      <%=	 f.hidden_field :seller_id, value: session[:seller_id] %>
-
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <%=	 f.submit 'Create product', class: 'btn btn-default'%>
-        </div>
-      </div>
-  <% end %>
-</div>
+<%= render 'form' %>
