--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -5,16 +5,4 @@
 <%= link_to 'Back', categories_path %>
 <%= link_to 'Add item for sale', new_product_path, class: 'btn btn-primary' %>
 
-<div class="row">
-  <% @products.each do |product| %>
-      <div class="col-sm-3">
-        <div class="card text-center">
-          <div class="card-block">
-            <h3 class="card-title"><%= link_to product.name, product %></td></h3>
-            <%= link_to "Edit", edit_product_path(product), class: 'btn btn-primary' %>
-            <%= link_to "Delete", product, method: :delete, class: 'btn btn-danger' %>
-          </div>
-        </div>
-      </div>
-  <% end %>
-</div>
+<%= render 'shared/prod_display' %>
