--- a/app/views/sellers/_form.html.erb
+++ b/app/views/sellers/_form.html.erb
@@ -6,12 +6,19 @@
             <h2><%= pluralize(@seller.errors.count, "error") %> prohibited this category from being saved:</h2>
 
             <ul>
-              <% @product.errors.full_messages.each do |message| %>
+              <% @seller.errors.full_messages.each do |message| %>
                   <li><%= message %></li>
               <% end %>
             </ul>
           </div>
       <% end %>
+
+      <div class="form-group">
+        <%=	 f.label :name, class: 'col-sm-2 control-label' %>
+        <div class="col-sm-10">
+          <%=	 f.text_field :name, class: 'form-control', placeholder: 'Name' %>
+        </div>
+      </div>
 
       <div class="form-group">
         <%=	 f.label :email, class: 'col-sm-2 control-label' %>
