--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -34,9 +34,9 @@
       </div>
 
       <div class="form-group">
-        <%=	 f.label :product_image, class: 'col-sm-2 control-label' %>
+        <%=	 f.label :product_images, class: 'col-sm-2 control-label' %>
         <div class="col-sm-10">
-          <%=	 f.file_field :product_image, class: 'form-control', placeholder: 'product image' %>
+          <%=	 f.file_field :product_images, class: 'form-control', placeholder: 'product image', multiple: true %>
         </div>
       </div>
 
