--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,11 +3,12 @@
   <%=	 form_for @product, html: {class: 'form-horizontal'} do |f| %>
       <% if @product.errors.any? %>
           <div id="error_explanation">
-            <h2><%= pluralize(@product.errors.count, "error") %> prohibited this category from being saved:</h2>
-
+            <div class="alert alert-danger">
+              The form contains <%= pluralize(@product.errors.count, "error") %>.
+            </div>
             <ul>
-              <% @product.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
+              <% @product.errors.full_messages.each do |msg| %>
+                  <li><%= msg %></li>
               <% end %>
             </ul>
           </div>
@@ -27,10 +28,23 @@
       </div>
 
       <div class="form-group">
+        <%=	 f.label :price, class: 'col-sm-2 control-label' %>
+        <div class="col-sm-10">
+          <%=	 f.number_field :price, class: 'form-control', placeholder: 'Product Description' %>
+        </div>
+      </div>
+
+      <div class="form-group">
         <%=	 f.label :category_id, class: 'col-sm-2 control-label' %>
         <div class="col-sm-10">
           <%=	 f.collection_select(:category_id, Category.all, :id, :name, class: 'form-control') %>
         </div>
+      </div>
+
+      <div class="row-fluid edit-image">
+        <%	@product.product_images.each do |image| %>
+            <%= image_tag image.url(:thumb) %>
+        <% end %>
       </div>
 
       <div class="form-group">
