--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -35,3 +35,5 @@
   </div>
 </div>
 <h4>Description: <%=  @product.description %></h4>
+<h4>Sold by: <%=  @seller.name %></h4>
+<h4>contact: <%=  @seller.phone_number %></h4>
