--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,24 +4,17 @@
   <div class="container">
     <h1 class="jumbotron-heading">Beljom</h1>
     <p class="lead text-muted">Mission Statement.</p>
-    <%	if not logged_in? %>
-        <p>
-          <a href="#" class="btn btn-primary">Sign Up as a Seller</a>
-        </p>
-    <% end %>
   </div>
 </section>
 
 <div class="row">
   <% @categories.each do |category| %>
   <div class="col-sm-4">
-    <div class="card text-center">
+    <div class="entry-main card text-center">
       <%= image_tag category.name.downcase, class: 'card-img-top' %>
       <div class="card-block">
-        <h3 class="card-title"><%= category.name %></h3>
-        <%= link_to 'View', category %>
+        <h3 class="card-title"><%= link_to category.name, category, class: 'card-title' %></h3>
       </div>
-
     </div>
   </div>
   <% end %>
