--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,16 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= @category.name %><small> small text</small></h1>
+<%= link_to 'Back', :back %>
 
-<%= link_to 'Back', categories_path %>
+<h1><%= @category.name %></h1>
 
 <div class="row">
   <% @products.each do |product| %>
       <div class="col-sm-3">
-        <div class="card text-center">
+        <div class="entry card text-center">
           <%= image_tag product.product_images.first.url(:thumb) || 'no_image_found', class: 'card-img-top' %>
           <div class="card-block">
-            <h3 class="card-title"><%= link_to product.name, product %></td></h3>
+            <p class="card-text"><%= link_to "[#{product.cond}] (#{product.currency} #{product.price})", product %></p>
+            <p class="card-text"><%= link_to "#{product.name}", product %></p>
           </div>
         </div>
       </div>
