--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,19 +41,11 @@
     <div class="container">
       <%= yield %>
     </div>
-    <footer class="footer">
-      <small>
-        The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-        by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
-      </small>
-      <nav>
-        <ul>
-          <li><%= link_to "About",   '#' %></li>
-          <li><%= link_to "Contact", '#' %></li>
-          <li><a href="http://news.railstutorial.org/">News</a></li>
-        </ul>
-      </nav>
-    </footer>
+    <!--<footer class="footer">-->
+      <!--<div class="container">-->
+        <!--<p class="text-muted"> We connect buyers and sellers</p>-->
+      <!--</div>-->
+    <!--</footer>-->
 
   </body>
 </html>
