--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -28,9 +28,23 @@
       </div>
 
       <div class="form-group">
+        <%=	 f.label :condition, class: 'col-sm-2 control-label' %>
+        <div class="col-sm-10">
+          <%= f.select :condition, options_for_select([['New', 0], ['Used', 1]]) %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <%=	 f.label :currency, class: 'col-sm-2 control-label' %>
+        <div class="col-sm-10">
+          <%= f.select :currency, options_for_select([['LE', 0], ['USD', 1]]) %>
+        </div>
+      </div>
+
+      <div class="form-group">
         <%=	 f.label :price, class: 'col-sm-2 control-label' %>
         <div class="col-sm-10">
-          <%=	 f.number_field :price, class: 'form-control', placeholder: 'Product Description' %>
+          <%=	 f.number_field :price, class: 'form-control', placeholder: 'Price' %>
         </div>
       </div>
 
