--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -1,8 +1,16 @@
 <p id="notice"><%= notice %></p>
+<div class="container">
+  <%= link_to 'Back', :back %>
+</div>
+<div class="container">
+  <h3>Me Markit</h3>
+</div>
+<div class="container">
+  <%= link_to 'Add item for sale', new_product_path, class: 'btn btn-primary' %>
+</div>
+<br>
+<div class="container">
+  <%= render 'shared/prod_display' %>
+</div>
 
-<h3>Me Markit</h3>
 
-<%= link_to 'Back', categories_path %>
-<%= link_to 'Add item for sale', new_product_path, class: 'btn btn-primary' %>
-
-<%= render 'shared/prod_display' %>
