--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,7 +6,7 @@
 
 <div class="row">
   <% @products.each do |product| %>
-      <div class="col-sm-3">
+      <div class="col-sm-5 col-md-4">
         <div class="entry card text-center">
           <%= image_tag product.product_images.first.url(:thumb) || 'no_image_found', class: 'card-img-top' %>
           <div class="card-block">
