redefine layout of nav bar

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,6 +4,8 @@
 //  width: 205px;
 //  padding-top: 5px;
 //}
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 .image-container-edit {
   position: relative;
