--- a/app/views/shared/_image_preview.html.erb
+++ b/app/views/shared/_image_preview.html.erb
@@ -2,7 +2,7 @@
   <%	@product.product_images.each_with_index do |image, index| %>
       <div class="image-container-edit">
         <%= image_tag image.url(:gallery_thumb) %>
-        <%= link_to image_tag('delete', class: "after"), fetch_items_path(product_id: @product, id: index), remote: true %>
+        <%= link_to image_tag('delete', class: "after"), fetch_items_path(product_id: @product, id: index), remote: true, data: {confirm: 'Are you sure?'} %>
       </div>
   <% end %>
 </div>
