--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,8 +11,8 @@
   <% @categories.each do |category| %>
   <div class="col-sm-4">
     <div class="entry-main card text-center">
-      <%= image_tag category.name.downcase, class: 'card-img-top' %>
-      <div class="card-block">
+      <%= image_tag "#{category.name.downcase}", class: 'main-image card-img-top' %>
+      <div class="content card-block">
         <h3 class="card-title"><%= link_to category.name, category, class: 'card-title' %></h3>
       </div>
     </div>
