--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,14 +6,15 @@
 
 <div class="row">
   <% @products.each do |product| %>
-      <div class="col-sm-5 col-md-4">
-        <div class="entry card text-center">
-          <%= image_tag product.product_images.first.url(:thumb) || 'no_image_found', class: 'card-img-top' %>
-          <div class="card-block">
-            <p class="card-text"><%= link_to "[#{product.cond}] (#{product.currency} #{product.price})", product %></p>
-            <p class="card-text"><%= link_to "#{product.name}", product %></p>
-          </div>
+    <div class="col-sm-4 col-md-3">
+      <div class="entry card wrapper">
+        <%= image_tag product.product_images.first.url(:thumb) || 'no_image_found', class: 'icon card-img-top' %>
+        <div class="content card-block">
+          <h6 class="card-title"><%= link_to "[#{product.cond}]", product %></h6>
+          <h6 class="card-title"><%= link_to "(#{product.currency} #{product.price})", product %></h6>
+          <h6 class="card-title"><%= link_to "#{product.name}", product %></h6>
         </div>
       </div>
+    </div>
   <% end %>
 </div>
