--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,50 +9,6 @@
   </head>
 
   <body>
-    <!--<header>-->
-      <!--<nav class="navbar navbar-default navbar-fixed-top">-->
-        <!--<div class="container">-->
-          <!--<div class="navbar-header">-->
-            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">-->
-              <!--<span class="sr-only">Toggle navigation</span>-->
-              <!--<span class="icon-bar"></span>-->
-              <!--<span class="icon-bar"></span>-->
-              <!--<span class="icon-bar"></span>-->
-            <!--</button>-->
-            <!--<a class="navbar-brand" href="/">Beljom</a>-->
-          <!--</div>-->
-          <!--<div id="navbar" class="collapse navbar-collapse">-->
-            <!--<ul class="nav navbar-nav">-->
-              <!--<%	if logged_in? %>-->
-                  <!--<li><%=	 link_to 'Log Out', logout_path, method: :delete %></li>-->
-                  <!--<li><%=  link_to 'Me Markit', seller_path(session[:seller_id]) %></li>-->
-              <!--<%	 else %>-->
-                  <!--<li><%=	 link_to 'Log In', login_path %></li>-->
-                  <!--<li><%=	 link_to 'Seller sign up', signup_path %></li>-->
-              <!--<%	 end %>-->
-              <!--<li><a href="#about">About</a></li>-->
-              <!--<li><a href="#contact">Contact</a></li>-->
-            <!--</ul>-->
-            <!--<%	if logged_in? %>-->
-            <!--<ul class="nav navbar-nav">-->
-              <!--<li class="dropdown">-->
-                <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=  %> <span class="caret"></span></a>-->
-                <!--<ul class="dropdown-menu">-->
-                  <!--<li><a href="#">Action</a></li>-->
-                  <!--<li><a href="#">Another action</a></li>-->
-                  <!--<li><a href="#">Something else here</a></li>-->
-                  <!--<li role="separator" class="divider"></li>-->
-                  <!--<li><a href="#">Separated link</a></li>-->
-                  <!--<li role="separator" class="divider"></li>-->
-                  <!--<li><a href="#">One more separated link</a></li>-->
-                <!--</ul>-->
-              <!--</li>-->
-            <!--</ul>-->
-            <!--<% end %>-->
-          <!--</div>&lt;!&ndash;/.nav-collapse &ndash;&gt;-->
-        <!--</div>-->
-      <!--</nav>-->
-    <!--</header>-->
   <header>
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
@@ -77,7 +33,7 @@
             <%	if logged_in? %>
                 <ul class="nav navbar-nav">
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user ? current_user.name : '' %> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><%=  link_to 'Me Markit', seller_path(session[:seller_id]) %></li>
                       <li role="separator" class="divider"></li>
@@ -97,6 +53,7 @@
     <div class="container">
       <%= yield %>
     </div>
+
     <!--<footer class="footer">-->
       <!--<div class="container">-->
         <!--<p class="text-muted"> We connect buyers and sellers</p>-->
