--- a/app/views/shared/_prod_display.html.erb
+++ b/app/views/shared/_prod_display.html.erb
@@ -1,18 +1,10 @@
 <div class="row">
   <% @products.each do |product| %>
-      <div class="col-sm-5 col-md-4">
+      <div class="col-sm-4 col-md-3">
         <div class="entry card text-center">
-          <%= image_tag product.product_images.first.try(:url, :thumb) || 'no_image_found', class: 'card-img-top' %>
-          <div class="card-block">
-            <div class="card-block">
-              <p class="card-text"><%= link_to "[#{product.cond}] (#{product.currency} #{product.price})", product %></p>
-              <p class="card-text"><%= link_to "#{product.name}", product %></p>
-            </div>
-          </div>
-        </div>
-        <div class="seller-options">
-          <%= link_to "Edit", edit_product_path(product), class: 'btn btn-primary' %>
-          <%= link_to "Delete", product, method: :delete, class: 'btn btn-danger' %>
+          <%= link_to raw("<i class=\"glyphicon glyphicon-edit\"></i>"), edit_product_path(product), class: 'btn btn-primary' %>
+          <%= link_to image_tag(product.product_images.first.try(:url, :thumb) || 'no_image_found', class: 'card-img-top'), product %>
+          <%= link_to raw("<i class=\"glyphicon glyphicon-trash\"></i>"), product, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure?'} %>
         </div>
       </div>
   <% end %>
