--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -8,7 +8,7 @@
   <% @products.each do |product| %>
     <div class="col-sm-4 col-md-3">
       <div class="entry card wrapper">
-        <%= image_tag product.product_images.first.url(:thumb) || 'no_image_found', class: 'icon card-img-top' %>
+        <%= image_tag product.product_images.first.url(:thumb) || 'no_image_found', class: 'icon card-img-top d-img' %>
         <div class="content card-block">
           <h6 class="card-title"><%= link_to "[#{product.cond}]", product %></h6>
           <h6 class="card-title"><%= link_to "(#{product.currency} #{product.price})", product %></h6>
