--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -50,6 +50,7 @@ div.seller-options {
 }
 
 /* image display */
+
 .d-img {
   max-width: 100%;
   max-height: 100%;
@@ -82,4 +83,14 @@ div.seller-options {
 /* */
 .div-click{
   padding: 0px;
+}
+
+/* entry display */
+div.des-entry {
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 4px 0 12px 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
