edit flash message

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,6 +18,7 @@
         });
     });
 </script>
+<% provide(:title, @product.name) %>
 <div class="container">
   <h2><%=  "#{@product.name} (#{@product.cond})" %></h2>
 </div>
