--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<% provide(:title, current_user.name) %>
 <div class="container">
   <%= link_to 'Back', :back %>
 </div>
