--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<% provide(:title, 'Categories') %>
 
 <section class="jumbotron text-center">
   <div class="container">
