--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,8 @@
-<p id="notice"><%= notice %></p>
+<% provide(:title, @category.name) %>
 
-<%= link_to 'Back', :back %>
-
-<h1><%= @category.name %></h1>
+<div class="container">
+  <h1><%= @category.name %></h1>
+</div>
 
 <div class="row">
   <% @products.each do |product| %>
