add number to currency conversion for view

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -76,8 +76,8 @@ div.seller-options {
   //background-color: lightgreen;
   color: black;
   flex: 12 1 auto;
-  padding: 20px;
-  align-self: center;
+  //padding: px;
+  //align-self: center;
 }
 
 /* */
