--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -67,7 +67,7 @@
 
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <%=	 f.submit 'Create product', class: 'btn btn-default'%>
+          <%=	 f.submit 'Save', class: 'btn btn-default'%>
         </div>
       </div>
   <% end %>
