--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -110,3 +110,20 @@ div.des-entry {
     color: $state-danger-text;
   }
 }
+
+/* */
+.des-td {
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  height:100%; 
+  width:410px; 
+  display:inline-block;
+}
+
+@media screen and (max-width: 480px){
+  .small-des-td {
+    width:200px; 
+  }
+}
