--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -10,10 +10,10 @@
 <div class="row">
   <% @categories.each do |category| %>
   <div class="col-sm-4">
-    <div class="entry-main card text-center">
+    <div class="entry-main card text-center"  onclick='location.href="<%= category_path(category) %>"'>
       <%= image_tag "#{category.name.downcase}", class: 'main-image card-img-top d-img' %>
       <div class="content card-block">
-        <h3 class="card-title"><%= link_to category.name, category, class: 'card-title' %></h3>
+        <h3 class="card-title"><%= category.name %></h3>
       </div>
     </div>
   </div>
