change placement of whatsapp icon

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,13 +21,16 @@
 <% provide(:title, @product.name) %>
 <div class="container">
   <h2><%=  "#{@product.name} (#{@product.cond})" %></h2>
+  <small>
+  <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+    <!--<a class="a2a_button_twitter"></a>-->
+    <a class="a2a_button_whatsapp" href='whatsapp://send?text=<%= product_url(@product)%>'></a>
+    <!--<a class="a2a_button_facebook"></a>-->
+  </div>
+  </small>
 </div>
 <!-- AddToAny BEGIN -->
-<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-  <!--<a class="a2a_button_twitter"></a>-->
-  <a class="a2a_button_whatsapp" href='whatsapp://send?text=<%= product_url(@product)%>'></a>
-  <!--<a class="a2a_button_facebook"></a>-->
-</div>
+
 <script async src="https://static.addtoany.com/menu/page.js"></script>
 <!-- AddToAny END -->
 <div class="col-md-6" >
