--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,7 +84,7 @@
     </div>
   </body>
   <footer class="footer navbar-fixed-bottom">
-    <div class="container">
+    <div class="container" style="background-color: #BBBBBB">
       <div class="col-md-10 col-md-offset-1 text-center">
         <h6>Coded with <i class="fa fa-heart red"></i> by the Dev Team at <a href="https://www.facebook.com/yayoofficialpage"></a>Y@y0</h6>
       </div>
