--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -32,13 +32,28 @@
           <%= f.select :condition, options_for_select([['New', 0], ['Used', 1]]) %>
         </div>
       </div>
-
       <div class="form-group">
         <%=	 f.label :currency, class: 'col-sm-2 control-label' %>
         <div class="col-sm-10">
           <%= f.select :currency, options_for_select([['LE', 0], ['USD', 1]]) %>
         </div>
       </div>
+
+      <% if @seller.admin %>
+          <div class="form-group">
+            <%=	 f.label :contact, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
+              <%=	 f.text_field :contact, class: 'form-control', placeholder: 'Contact' %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%=	 f.label :seller_name, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
+              <%=	 f.text_field :seller_name, class: 'form-control', placeholder: 'Seller Name' %>
+            </div>
+          </div>
+      <% end %>
 
       <div class="form-group">
         <%=	 f.label :price, class: 'col-sm-2 control-label' %>
